--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
         "express": "^4.17.1",
         "express-session": "^1.17.1",
         "jsonwebtoken": "^8.5.1",
+        "pg": "^8.3.0",
         "redis": "^3.0.2",
-        "sequelize": "^5.21.1",
-        "sqlite3": "^5.0.0"
+        "sequelize": "^5.21.1"
     }
 }
